# edgesense-ai

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  docker-compose.secure.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-torch.txt  requirements.txt
.claude/: launch.json
.github/workflows/: azure-deploy.yml  ci.yml  model-gate.yml  retrain-on-drift.yml
coap-receiver/: Dockerfile  go.mod  go.sum  handler.go  handler_test.go  main.go  metrics.go
dashboard/: Dockerfile  app.py  requirements.txt
deploy/: mosquitto.conf  prometheus.yml
deploy/grafana/dashboards/: edgesense.json
deploy/grafana/provisioning/alerting/: edgesense-drift.yml
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/secure/: acl  mosquitto.conf  passwd
docs/: BENCHMARK.md  EVALUATION.md  GLOSSARY.md  HARDWARE.md  MLOPS.md  PLATFORM.md  SECURITY.md
edge-agent/: Dockerfile  buffer.go  buffer_test.go  coap.go  coap_test.go  go.mod  go.sum  main.go  main_test.go  metrics.go  metrics_test.go  topics.go  topics_test.go  uplink.go
edgesense-azure/: README.md
edgesense-azure/.github/workflows/: azure-deploy.yml
edgesense-azure/docs/: AZURE.md  AZUREML.md  PHASE3-4.md
edgesense-azure/infra/: .terraform.lock.hcl  azureml.tf  main.tf  outputs.tf  phase3.tf  terraform.tfvars.example  variables.tf  versions.tf
edgesense-azure/ml/: deploy_endpoint.sh  deployment.yml  environment.yml  register_model.py  retrain_job.yml  score.py
edgesense-azure/scripts/: build-and-push.sh
inference/: Dockerfile  drift.py  metrics.py  requirements.txt  server.py  shadow.py
mcp_server/: Dockerfile  requirements.txt  server.py
ml/: benchmark_public.py  evaluate.py  export_onnx.py  manifest.py  promote.py  register_model.py  scoring.py  train.py
scripts/: check_acl.py  demo.py  demo_offline.py  gen_broker_auth.py  smoke.py
simulator/: Dockerfile  simulate.py
snap/: snapcraft.yaml
tests/: conftest.py  test_benchmark.py  test_drift.py  test_evaluate.py  test_inference_api.py  test_manifest.py  test_mcp_server.py  test_model.py  test_onnx.py  test_promote.py  test_reload.py  test_shadow.py  test_simulator.py  test_torch_backend.py
(+1 files in other folders)
